Bug 161006 - [UI] Calc - Format - Page Style has problems for KF5 and GEN VCL_PLUGINS
Summary: [UI] Calc - Format - Page Style has problems for KF5 and GEN VCL_PLUGINS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks: Calc-Styles
  Show dependency treegraph
 
Reported: 2024-05-09 12:04 UTC by Olivier Hallot
Modified: 2024-05-31 05:56 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Page Style Dialog with issue (52.19 KB, image/png)
2024-05-09 12:04 UTC, Olivier Hallot
Details
Screencast showing invisible vertical tab labels (3.45 MB, video/x-matroska)
2024-05-28 15:08 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2024-05-09 12:04:12 UTC
Created attachment 194051 [details]
Page Style Dialog with issue

For Calc, under GEN and KF5 VCL plugins, the dialog Format - Page Style is poorly rendered and cannot be resized.

See image attached for GEN VCL plugin.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4f5f24a4a3dac22e0f2c0d4832e0cbdd566263b9
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: x11
Locale: pt-BR (pt_BR.UTF-8); UI: pt-BR
Calc: threaded
Comment 1 stragu 2024-05-09 14:24:42 UTC
Reproduced:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 92815f3a464b447898ecf52492247335228e4a72
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 2 Michael Weghorn 2024-05-28 15:08:12 UTC
Created attachment 194404 [details]
Screencast showing invisible vertical tab labels

Somewhat related, the labels are also not always rendered when navigating through the tabs using the keyboard, s. attached screencast with the gen VCL plugin on Linux (same with qt6 or on Windows).
Comment 3 Commit Notification 2024-05-30 20:35:32 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7629d31f02a9fdbdf71295744c8869dee5cb4c54

tdf#161006 tdf#161049 tdf#161020 tdf#161047 fix VertTabCtrl size calculation

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Thorsten Behrens (allotropia) 2024-05-30 20:36:36 UTC
Fixed, remaining focus rect glitch is bug 144981
Comment 5 Buovjaga 2024-05-31 05:56:19 UTC Comment hidden (obsolete)