tdf#161006 tdf#161049 tdf#161020 tdf#161047 fix VertTabCtrl size calculation

* don't rely on initial dummy pages
* so instead override GetOptimalSize() and do the math again
* this assumes that all tab pages have been inserted at the time time
  GetOptimalSize() gets called for the last time

Change-Id: I668347744d8ec9b94824f38cfc4b7ca00771a476
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168081
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>